--- a/Threads_Processes_IPC/Threads/Code/golang/README.adoc
+++ b/Threads_Processes_IPC/Threads/Code/golang/README.adoc
@@ -31,3 +31,76 @@ $ go run main.go
 Hello from main!
 Hello from goroutine!
 ```
+
+== 10 Threads
+```go
+package main
+import (
+    "fmt"
+    "sync"
+    "time"
+)
+
+func worker(id int, wg *sync.WaitGroup) {
+    defer wg.Done()
+    fmt.Printf("Worker %d started\n", id)
+    time.Sleep(time.Second) // Simulate work
+    fmt.Printf("Worker %d finished\n", id)
+}
+
+func main() {
+    var wg sync.WaitGroup
+
+    // Number of goroutines to create
+    numWorkers := 10
+
+    // Add numWorkers to the WaitGroup
+    wg.Add(numWorkers)
+
+    // Create goroutines
+    for i := 1; i <= numWorkers; i++ {
+        go worker(i, &wg)
+    }
+
+    // Wait for all goroutines to finish
+    wg.Wait()
+
+    fmt.Println("All workers finished")
+}
+
+$ go run test.go
+Worker 10 started
+Worker 8 started
+Worker 9 started
+Worker 2 started
+Worker 1 started
+Worker 6 started
+Worker 3 started
+Worker 4 started
+Worker 5 started
+Worker 7 started
+Worker 10 finished
+Worker 8 finished
+Worker 1 finished
+Worker 9 finished
+Worker 2 finished
+Worker 3 finished
+Worker 6 finished
+Worker 4 finished
+Worker 7 finished
+Worker 5 finished
+All workers finished
+```
+
+== waitgroup
+* sync.WaitGroup is a synchronization primitive provided by the Go standard library in sync package
+* it is used to synchronize the execution of a group of goroutines.
+
+=== How it works
+* A WaitGroup has a counter internally(which is initially set to zero). 
+```
+go routine 
+    - Launched: Increment couter using Add()
+    - exits:    Decrement counter using Done()
+```
+
