--- a/DS_Questions/Questions/vectors_arrays/Order_Arrangment/Unsorted/Reveal_Cards_In_Increasing_Order.adoc
+++ b/DS_Questions/Questions/vectors_arrays/Order_Arrangment/Unsorted/Reveal_Cards_In_Increasing_Order.adoc
@@ -52,7 +52,7 @@ Reveal  push_to_back
   17
 ```
 
-== Approach-1. Deque
+== Approach-1. Rearrange using Deque
 === Logic
 * Sort all elements
 ```c
