--- a/DS_Questions/Data_Structures/Trees/BinaryTree/Distance_Path_Cost/Path_Cost/Print_all_paths.adoc
+++ b/DS_Questions/Data_Structures/Trees/BinaryTree/Distance_Path_Cost/Path_Cost/Print_all_paths.adoc
@@ -2,14 +2,17 @@
 :toclevels: 6
 
 == Print all paths of binary tree
+
+image:https://assets.leetcode.com/uploads/2021/02/19/num2tree.jpg?raw=true[tree]
+
 ```c
 input=
-     1
-   /   \
-  2     5
- / \
-3  4
-output = 123, 124, 15
+      4
+    /    \
+   9      0
+  / \
+ 5   1
+output = 495, 491, 40
 ```
 
 == Approach
