--- a/DS_Questions/Data_Structures/Trees/BinaryTree/Distance_Path_Cost/Path_Cost/Print_all_paths.adoc
+++ b/DS_Questions/Data_Structures/Trees/BinaryTree/Distance_Path_Cost/Path_Cost/Print_all_paths.adoc
@@ -27,6 +27,7 @@ else
   go_to right
 ```
 * When exiting node, pop_back node's value
+* This will keep all nodes in reverse order.
 
 === Code
 ```cpp
