--- a/DS_Questions/Questions/vectors_arrays/2d-grid/Matrix_of_0_1/Island_Perimeter.adoc
+++ b/DS_Questions/Questions/vectors_arrays/2d-grid/Matrix_of_0_1/Island_Perimeter.adoc
@@ -25,7 +25,7 @@ Input: grid = [[1,0]]
 Output: 4
 ```
 
-== Approach-1. O(mn)
+== Approach-1. O(mn). Iterate every element
 === Logic
 * Iterate over array and find 1
 ```c
@@ -91,4 +91,105 @@ public:
 		return out;
     }
 };
+```
+
+==== Rust
+```rs
+impl Solution {
+    pub fn find_perim(v: &Vec<Vec<i32>>, r: i32, c: i32) -> i32 {
+        let mut perimeter = 0;
+        let row_dir = vec![-1,0,0,1];
+        let col_dir = vec![-0,1,-1,0];
+        let rows = v.len() as i32;
+        let cols = v[0].len() as i32;
+        for i in 0.. 4 {
+            let neigh_row = r as i32 + row_dir[i];
+            let neigh_col = c as i32 + col_dir[i];
+
+            // if this element is on boundary, add 1 to perimeter
+			if neigh_row < 0 || neigh_row >= rows ||
+				neigh_col < 0 || neigh_col >= cols {
+				perimeter += 1;
+				continue;
+			}
+            // if neighbbour element is 0, add 1 to perimeter
+			if v[neigh_row as usize][neigh_col as usize] == 0 {
+                perimeter += 1;
+            }
+        }
+        perimeter
+    }
+    pub fn island_perimeter(grid: Vec<Vec<i32>>) -> i32 {
+        let mut out = 0;
+        let rows = grid.len() as i32;
+        let cols = grid[0].len() as i32;
+        for i in 0..rows {
+            for j in 0..cols {
+                if grid[i as usize][j as usize] == 1 {
+                    out += Self::find_perim(&grid, i as i32 , j as i32);
+                }
+            }
+        }
+        out
+    }
+}
+```
+
+==== Rust (self, Solution{rows, cols})
+```rs
+struct Solution {
+    rows: i32,
+    cols: i32
+}
+impl Solution {
+    pub fn find_perim(&mut self, v: &Vec<Vec<i32>>, r: i32, c: i32) -> i32 {
+        let mut perimeter = 0;
+        let row_dir = vec![-1,0,0,1];
+        let col_dir = vec![-0,1,-1,0];
+        for i in 0.. 4 {
+            let neigh_row = r as i32 + row_dir[i];
+            let neigh_col = c as i32 + col_dir[i];
+
+            // if this element is on boundary, add 1 to perimeter
+			if neigh_row < 0 || neigh_row >= self.rows ||
+				neigh_col < 0 || neigh_col >= self.cols {
+				perimeter += 1;
+				continue;
+			}
+            // if neighbbour element is 0, add 1 to perimeter
+			if v[neigh_row as usize][neigh_col as usize] == 0 {
+                perimeter += 1;
+            }
+        }
+        perimeter
+    }
+    pub fn island_perimeter(&mut self, grid: &Vec<Vec<i32>>) -> i32 {
+        let mut out = 0;
+        self.rows = grid.len() as i32;
+        self.cols = grid[0].len() as i32;
+        for i in 0..self.rows {
+            for j in 0..self.cols {
+                if grid[i as usize][j as usize] == 1 {
+                    out += Self::find_perim(self, grid, i as i32 , j as i32);
+                }
+            }
+        }
+        out
+    }
+}
+fn main() {
+    let v: Vec<Vec<i32>> = vec![
+        vec![0, 1, 0, 0],
+        vec![1, 1, 1, 0],
+        vec![0, 1, 0, 0],
+        vec![1, 1, 0, 0]
+    ];
+
+    let mut a = Solution {
+        rows: 0,
+        cols: 0
+    };
+    let b = a.island_perimeter(&v);
+    println!("{}",b);
+}
 ```
