--- a/Languages/Programming_Languages/Rust/References_and_Borrowing/README.adoc
+++ b/Languages/Programming_Languages/Rust/References_and_Borrowing/README.adoc
@@ -3,40 +3,6 @@
 
 
 == Borrowing = Reference (&var)
-- Means passing the reference of a variable.
-  - **Mutable Reference/Mutable Borrow:** Allow the borrower to modify the data.
-  - **Immutable Reference:** Donot allow the borrower to modify the data.
-```rust
-fn print( a : &Vec<i32>) {
-  println!("{}"a.len());            //1
-  //a.push(2);                      //Compilation error. We cannot change borrowed. Changing immutable
-}
-fn main() {
-  let mut v = Vec::new();
-  v.push(1);
-  print(&v);                         //Borrowed not moved
-  println!("{}", v[0]);              //1
-}
-```
-
-== link:https://amitkumar50.github.io/Languages/Programming/Rust#danglingreferences[Dangling Reference]
-- Allowed in C++, Not allowed in Rust
-
-== Mutable Reference
-- We know a borrowed item cannot be changed, but mutable reference can be changed.
-```rust
-fn print( a : &mut Vec<i32>) {        //3. Accept mutable reference using `some_string: &mut String`
-  a.push(2);
-}
-fn main() {
-  let mut v = Vec::new();             //1. Declare mutable variable
-  v.push (1);
-  print (&mut v);                     //2.Create mutable Reference using `&mut`
-  println! ("{}", v[0]);
-}
-# rustc test.rs
-# test.exe
-```
 
 === 1. Mutable & immutable References in same scope not allowed
 ```rust
@@ -45,11 +11,11 @@ fn main() {
     v.push(6);                                    //Compilation Error
     println!("first:{}", first);
 ```
-*Compilation Error Why?*
-  - The code might look like should work. 
-  - This error is due to the way vectors work. adding a new element onto the end of the vector might require allocating new memory and copying the old elements to the new space. 
-  - if there isn’t enough room to put all the elements next to each other where the vector currently is. In that case, the reference to the first element would be pointing to deallocated memory. 
-  - The borrowing rules prevent programs from ending up in that situation.
+* *Compilation Error Why?*
+** The code might look like should work. 
+** This error is due to the way vectors work. adding a new element onto the end of the vector might require allocating new memory and copying the old elements to the new space. 
+** if there isn’t enough room to put all the elements next to each other where the vector currently is. In that case, the reference to the first element would be pointing to deallocated memory. 
+** The borrowing rules prevent programs from ending up in that situation.
 
 === 2. Two Mutable references are not allowed in same scope
 - *Why?* To avoid data race conditions. Race condition occurs when any of 3 behaviours happen:
